# FrameGen

./: .gitignore  CMakeLists.txt  LICENSE  NEXT_STEPS.md  README.md  STRUCTURE.txt  check_syntax.ps1  export_rife.py  launcher.ps1  launcher_settings.json
shaders/: BGRAPresent.hlsl  BGRAtoNCHW.hlsl  NCHWPresent.hlsl  NCHWPresentFSRPS.hlsl  NchwToTexCS.hlsl  NearDuplicateCS.hlsl  NisBlitPS.hlsl  NisMain.hlsl  UpscaleCS.hlsl
src/: AudioCaptureSource.cpp  AudioCaptureSource.h  AudioPlayer.cpp  AudioPlayer.h  CaptureSource.cpp  CaptureSource.h  Common.h  D3DContext.cpp  D3DContext.h  FileSource.cpp  FileSource.h  FrameQueue.h  NearDuplicateDetector.cpp  NearDuplicateDetector.h  NisUpscaler.cpp  NisUpscaler.h  Overlay.cpp  Overlay.h  Pipeline.cpp  Pipeline.h  RifeInference.cpp  RifeInference.h  SwapPresenter.cpp  SwapPresenter.h  Telemetry.cpp  Telemetry.h  TextureConverter.cpp  TextureConverter.h  Upscaler.cpp  Upscaler.h  main.cpp
testdata/: generate_test_videos.ps1
